--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "concurrently \"nodemon ./bin/www\" \"sass --watch public/scss/main.scss:public/css/styles.css\""
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,6 +16,8 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "concurrently": "^9.2.1",
+    "nodemon": "^3.1.11",
+    "sass": "^1.97.3"
   }
 }
